--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <style>
      .message { font-size: 1.3em; font-weight: bold; }
      body { background-image : url("images/pizza.jpg"); background-repeat: no-repeat;
-       background-size: 100%; color : blue;}
+       background-size: 100%;
+        background-position:0 100px;
+        color : blue;}
    </style>
   </head>
 <body ng-app="LunchChecker" style="background= src='images/pizza.jpg'">
