--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
      .message { font-size: 1.3em; font-weight: bold; }
      body { background-image : url("images/pizza.jpg"); background-repeat: no-repeat;
        background-size: 100%;
-        background-position:0 100px;
-        color : blue;}
+       background-position:0px 110px,center;
+       color : blue;}
    </style>
   </head>
 <body ng-app="LunchChecker" style="background= src='images/pizza.jpg'">
